# magic

./: README.md  code.mm  gui.xml  main.mm  pyproject.toml  sorgente copy.mm  sorgente.mm
examples/: example_cli.py  example_compiler.py  example_full.py  example_gui.py
src/analyzer/: grammar.py  lexical.py  semantic.py  syntax.py
src/compiler/: transpiler.py
src/core/: application.py  data.py  gui.py  logic.py  object.py  worker.py
src/generator/: encoder.py  python.py
src/ide/: action.py  app_bar.py  ide.py  side_bar.py  status_bar.py  work_space.py
tests/: test_broker.py  test_data.py  test_grammar.py  test_logic.py
